add support for ws url access

--- a/web-bootstrap/src/main/web/index.html
+++ b/web-bootstrap/src/main/web/index.html
@@ -163,7 +163,9 @@
 
     </div><!--/.fluid-container-->
   
-
+    <script type="text/javascript">
+      var docServiceUrl = '${docServiceUrl}';
+    </script>
     <script src="bower_components/angular/angular.js"></script>
 
     <!-- build:js({.tmp,<%= yeoman.app %>}) scripts/scripts.js -->
