--- a/web-bootstrap/src/main/web/index.html
+++ b/web-bootstrap/src/main/web/index.html
@@ -169,8 +169,12 @@
     <script src="bower_components/angular/angular.js"></script>
 
     <!-- build:js({.tmp,<%= yeoman.app %>}) scripts/scripts.js -->
-    <script src="scripts/app.js"></script>
+    <script src="scripts/jaxrs-doc.js"></script>
     <script src="scripts/controllers/main.js"></script>
+    
+    <script src="scripts/filters/class-short-name.js"></script>
+    <script src="scripts/directives/my-current-time.js"></script>
+    
     <!-- endbuild -->
 
         <!-- build:js scripts/plugins.js -->
